kustomize/base/deployment-ratings.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings-deployment
  namespace: dev
spec:
  selector:
    matchLabels:
      app: ratings
  replicas: 2
  template:
    metadata:
      labels:
        app: ratings
    spec:
      imagePullSecrets:
      - name: ocirsecret
      containers:
      - name: details
        image: iad.ocir.io/idmaqhrbiuyo/ratings:v0.1
        ports:
        - containerPort: 3002
        readinessProbe:
          httpGet:
            path: /
            port: 3002
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 2   
        resources:
          limits:
            cpu: "1" 
            memory: 2Gi
          requests:
            cpu: "1"
            memory: "2Gi"
