kustomize/base/service-details.yaml
apiVersion: v1 
kind: Service
metadata: 
  name: details-service
  namespace: dev
spec:
  selector:
    app: details
  ports:
  - port: 3001
